--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Zach417/churchetto-web#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
@@ -30,6 +31,9 @@
     "jquery": "^2.2.2",
     "keymirror": "^0.1.1",
     "moment": "^2.12.0",
+    "mongoose": "^4.4.10",
+    "node-restful": "^0.2.5",
+    "nodemailer": "^0.7.1",
     "object-assign": "^4.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
