--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
+    "uglify": "^0.1.5",
     "uglifyjs": "^2.4.10"
   }
 }
