--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "chart.js": "^1.1.1",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
     "envify": "^3.4.0",
@@ -37,6 +38,7 @@
     "nodemailer": "^0.7.1",
     "object-assign": "^4.0.1",
     "react": "^0.14.7",
+    "react-chartjs": "^0.7.3",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
     "string": "^3.3.1",
