--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "keymirror": "^0.1.1",
     "latest-version": "^2.0.0",
     "moment": "^2.12.0",
+    "moment-range": "^2.2.0",
     "mongoose": "^4.4.10",
     "node-restful": "^0.2.5",
     "nodemailer": "^0.7.1",
